[package]
name = "worker-rust"
version = "0.1.0"
edition = "2021"

# https://github.com/rustwasm/wasm-pack/issues/1247
[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[lib]
crate-type = ["cdylib"]

[dependencies]
askama = "0.12.0"
worker = "0.0.15"
scraper = "0.17.1"
getrandom = { version = "0.2", features = ["js"] }
reqwest = { version = "0.11.18", features = ["multipart", "json"] }
serde = { version = "1.0.166", features = ["derive"] }
serde_json = "1.0.100"

[profile.release]
lto = true
strip = true
codegen-units = 1
