[package]
name = "worker-rust"
version = "0.1.0"
edition = "2021"

# https://github.com/rustwasm/wasm-pack/issues/1247
[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[lib]
crate-type = ["cdylib"]

[dependencies]
askama = "0.12.0"
console_error_panic_hook = "0.1.7"
cookie = "0.17.0"
cookie_store = { version = "0.20.0", features = ["wasm-bindgen"] }
worker = "0.0.15"
getrandom = { version = "0.2", features = ["js"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.100"

[profile.release]
lto = true
strip = true
codegen-units = 1

[dependencies.reqwest]
git = "https://github.com/Yash-Garg/reqwest"
branch = "master"
features = ["cookies"]
